name:                JuicyPixels-qoi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Annwan/JuicyPixels-qoi#readme
license:             BSD3
license-file:        LICENSE
author:              Antoine Combet
maintainer:          annwan@annwan.me
copyright:           2022 Antoine COMBET
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Annwan/JuicyPixels-qoi
